--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "next": "^10.0.5",
+    "next-pwa": "^5.2.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "ress": "^4.0.0"
