--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "graphql": "^15.5.0",
     "next": "^10.0.5",
+    "next-urql": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "ress": "^4.0.0"
+    "react-is": "^16.13.1",
+    "ress": "^4.0.0",
+    "urql": "^2.0.3"
   },
   "license": "MIT",
   "devDependencies": {
