--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint src --fix"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.3.1",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "graphql": "^15.5.0",
