--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@auth0/nextjs-auth0": "^1.3.1",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@urql/exchange-auth": "^0.1.3",
     "graphql": "^15.5.0",
+    "graphql-tag": "^2.12.4",
     "next": "^10.0.5",
-    "next-urql": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-is": "^16.13.1",
     "ress": "^4.0.0",
     "urql": "^2.0.3"
   },
