--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth0/nextjs-auth0": "^1.3.1",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@urql/devtools": "^2.0.3",
     "@urql/exchange-auth": "^0.1.3",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
