--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "lint": "eslint src --fix"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^1.3.1",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-auth": "^0.1.3",
     "graphql": "^15.5.0",
     "next": "^10.0.5",
+    "next-auth": "^3.26.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "ress": "^4.0.0",
