--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint src --fix"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^1.3.1",
+    "@auth0/auth0-react": "^1.5.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@urql/devtools": "^2.0.3",
