--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "lint": "eslint src --fix"
+    "lint:old": "eslint src --fix",
+    "lint": "next lint"
+
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.5.0",
@@ -31,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "eslint": "7.29.0",
+    "eslint-config-next": "^11.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jsx-a11y": "6.4.1",
