--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@emotion/styled": "^11.0.0",
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-auth": "^0.1.3",
+    "compressorjs": "^1.0.7",
+    "final-form": "^4.20.2",
     "graphql": "^15.5.0",
     "next": "^11.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-final-form": "^6.5.3",
     "ress": "^4.0.0",
     "urql": "^2.0.3"
   },
