chore: change renovate setting

--- a/renovate.json
+++ b/renovate.json
@@ -1,13 +1,11 @@
 {
-  "extends": [
-    "config:base"
-  ],
   "baseBranches": ["develop"],
   "timezone": "Asia/Tokyo",
   "schedule": "every weekend",
+  "automergeType": "branch",
   "packageRules": [
     {
-      "matchDepTypes": ["devDependencies"],
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
       "automerge": true
     }
   ]
